# solana-substreams-dex

./: .gitignore  Cargo.toml  Makefile  README.md  refactor-remove-cloning.spkg  substreams.yaml
proto/: jupiter_aggregator.proto  spl_token.proto  spl_token_meta.proto  swap.proto
src/: constants.rs  db.rs  lib.rs  prepare_arg.rs  prepare_input_accounts.rs  spl_token.rs  spl_token_instruction.rs  spl_token_meta.rs  swap.rs  trade_instruction.rs  utils.rs
src/dapps/: dapp_675kPX9MHTjS2zt1qfr1NYHuzeLXfQM9H24wFSUt1Mp8.rs  dapp_6EF8rrecthR5Dkzon8Nwu78hRvfCKubJ14M5uBEwF6P.rs
src/instructions/: parser.rs  structs.rs
src/jupiter_aggregator/: jupiter_aggregator.rs  jupiter_aggregator_instruction.rs  mod.rs
src/pb/: mod.rs  sf.solana.dex.jupiter_aggregator.v1.rs  sf.solana.dex.meta.v1.rs  sf.solana.dex.spl.v1.rs  sf.solana.dex.trades.v1.rs
src/pool_creations/: mod.rs  pool.rs  pool_instruction.rs
src/pool_creations/dapps/: dapp_675kPX9MHTjS2zt1qfr1NYHuzeLXfQM9H24wFSUt1Mp8.rs  dapp_6EF8rrecthR5Dkzon8Nwu78hRvfCKubJ14M5uBEwF6P.rs  dapp_CAMMCzo5YL8w4VFF8KVHrK22GGUsp5VTaW7grrKgrWqK.rs  dapp_CPMMoo8L3F4NbTegBCKVNunggL7H1ZpdTHKxQB5qKP1C.rs  dapp_Eo7WjKq67rjJQSZxS6z3YkapzY3eMj6Xy8X5EQVn5UaB.rs  dapp_LBUZKhRxPF3XUpBCjp4YzTKgLccjZhTSDM9YuVaPwxo.rs  dapp_MoonCVVNZFSYkqNXP6bxHLPL6QQJiMagDL3qcqUQTrG.rs  dapp_whirLbMiicVdio4qvUfM5KAg6Ct8VwpYzGff3uctyCc.rs  mod.rs
src/spl_token/: mod.rs  spl_token.rs  spl_token_instruction.rs  spl_token_meta.rs  spl_token_meta_instruction.rs
src/swap/: mod.rs  swap.rs  trade_instruction.rs
src/swap/dapps/: mod.rs  (+8 more)
