[package]
name = "solana-substreams-dex"
version = "0.1.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.6.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
substreams-solana-program-instructions = "0.2.0"
bytes = "1.1.0"
prost = "0.13.3"
num-bigint = "0.4"
bs58 = "0.5.0"
borsh = { version = "1.5.1",features = ["std", "unstable__schema"]  }
chrono = { version = "0.4", features = [ "std" ], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"